[package]
name = "looplift"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version= "1.0.210", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.17", features = ["derive"] }

[dev-dependencies]
assert_hex = "0.4.1"
