[package]
name = "looplift"
version = "0.1.0"
description = "Lift loop files from within a filesystem to the block device hosting that filesystem."
license = "MIT"
authors = ["Paul Richards <paul.richards@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version= "1.0.210", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.17", features = ["derive"] }
indicatif = "0.17.8"

[dev-dependencies]
assert_hex = "0.4.1"
